--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,9 @@ collections:
   authors:
     output: true
 baseurl: /pjlabuda
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
