--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,4 @@ defaults:
   - scope:
       path: "" # an empty string here means all files in the project
     values:
-      layout: "default"
-  - scope:
-      path: "pjlabuda/authors"
-    values:
-      layout: "project" # overrides previous default layout
+      layout: "project"
