--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,9 @@ defaults:
   - scope:
       path: "" # an empty string here means all files in the project
     values:
+      layout: "default"
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "authors"
+    values:
       layout: "project"
